@startuml

' Definition of the Instructor class
class Instructor {
    -firstName : String
    -lastName : String
    -officeNumber : String

    +setFirstName(firstName : String) : void
    +getFirstName() : String
    +setLastName(lastName : String) : void
    +getLastName() : String
    +setOfficeNumber(officeNumber : String) : void
    +getOfficeNumber() : String
}

' Definition of the Textbook class
class Textbook {
    -title : String
    -author : String
    -publisher : String

    +setTitle(title : String) : void
    +getTitle() : String
    +setAuthor(author : String) : void
    +getAuthor() : String
    +setPublisher(publisher : String) : void
    +getPublisher() : String
}

' Definition of the Course class, which aggregates Instructor and Textbook
class Course {
    -name : String
    -instructors : ArrayList<Instructor>
    -textbooks : ArrayList<Textbook>

    +setName(name : String) : void
    +getName() : String
    +setInstructor(instructor : Instructor) : void
    +getInstructors() : ArrayList<Instructor>
    +setTextbook(textbook : Textbook) : void
    +getTextbooks() : ArrayList<Textbook>
    +printCourse() : void
}

Course "1" *-- "many" Instructor : has >
Course "1" *-- "many" Textbook : has >

@enduml
